--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 <body>
 
     <div class="wrapper">
-        
+        <img src="images/logo.png">
+
+        <h1>FEATURED</h1>
+
+        <div class="featured">
     </div>
+    <h1>WHO'S WHO</h1>
+    
+    <div class="whoswho">
+
+    </div>
+</div>
 
 
 </body>
