--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
         <h1>FEATURED</h1>
 
         <div class="featured">
+
+            <div class="item">
+                <img src="images/featured_all_acces.jpg">
+                <h3>DC All Acces</h3>
+            </div>
+            <div class="item wonderwoman">
+                <img src="images/featured_wonderwoman.jpg">
+                <h3>Wonder Woman</h3>
+            </div>
     </div>
     <h1>WHO'S WHO</h1>
-    
+
     <div class="whoswho">
 
     </div>
