--- a/index.html
+++ b/index.html
@@ -1,38 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DC</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>DC</title>
 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="wrapper">
+			<img src="images/logo.png" />
 
-    <div class="wrapper">
-        <img src="images/logo.png">
+			<h1>FEATURED</h1>
 
-        <h1>FEATURED</h1>
+			<div class="featured">
+				<div class="item">
+					<img src="images/featured_all_acces.jpg" />
+					<h3>DC All Acces</h3>
+				</div>
+				<div class="item wonderwoman">
+					<img src="images/featured_wonderwoman.jpg" />
+					<h3>Wonder Woman</h3>
+				</div>
+			</div>
+			<h1>WHO'S WHO</h1>
 
-        <div class="featured">
+			<div class="whoswho">
+				<div class="item">
+					<img src="images/batman.jpg" />
+					<h4>Batman</h4>
+				</div>
+				<div class="item">
+					<img src="images/superman.jpg" />
+					<h4>Superman</h4>
+				</div>
 
-            <div class="item">
-                <img src="images/featured_all_acces.jpg">
-                <h3>DC All Acces</h3>
-            </div>
-            <div class="item wonderwoman">
-                <img src="images/featured_wonderwoman.jpg">
-                <h3>Wonder Woman</h3>
-            </div>
-    </div>
-    <h1>WHO'S WHO</h1>
+				<div class="item">
+					<img src="images/wonderwoman.jpg" />
+					<h4>Wonderwoman</h4>
+				</div>
 
-    <div class="whoswho">
+				<div class="item">
+					<img src="images/flash.jpg" />
+					<h4>The Flash</h4>
+				</div>
 
-    </div>
-</div>
-
-
-</body>
+				<div class="item">
+					<img src="images/greenlantern.jpg" />
+					<h4>Green Lantern</h4>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
